src/main/amp/web/scripts/vieweditor/styles/styles.css
/* ... */
.author:after {
  content:", ";
}

.section.page img {
  max-width: 100%;
}

#top-alert {
  position: fixed;
  width: 100%;
  z-index: 100;
  margin-top: -10px;
  box-shadow: 0 0 5px rgba(0,0,0, .2);
}

.manualtable table,th,td
{
	border:1px solid black;
	padding: 2px;
}


.missing {
  color: red;
}

.mini-toolbar {
  background: #f1f1f1 !important;
  padding: 5px;
}
.mini-toolbar button {
  background: #fff !important;
}


.transclusionList .items
{
	height:600px;
	/*overflow-y: scroll;*/
}
.transclusionList .items>div
{
	cursor: pointer;
	position: relative;
	margin-bottom: 10px;
}
.transclusionList .items>div:hover
{
	background:#fafafa;
}
.transclusionList .items>div .body>*
{
	padding:10px;
}
.transclusionList .body
{
	padding: 5px;
}
.transclusionList .items>div .body>*:hover
{
	background:#eee;
}
.transclusionList .items>div .qualifiedName
{
	color:#aaa;
	font-size: 12px;
	height: 0;
	position: absolute;
	padding-left: 2px;
	top:4px;
	z-index: 2;
	white-space: nowrap;
}

/* transclusion type display */
.transclusionList .items>div .name:hover:after,.transclusionList .items>div .documentation:hover:after,.transclusionList .items>div .dvalue:hover:after
{
	position: absolute;
	top:6px;
	right: 10px;
	font-size: 12px;
	font-weight: normal;
	color: #aaa;
}
.transclusionList .items>div .name:hover:after
{
	content: "name";
}
.transclusionList .items>div .documentation:hover:after
{
	content: "documentation";
}
.transclusionList .items>div .dvalue:hover:after
{
	content: "value";
}


.transclusionList .items>div .name
{
	margin-bottom: 0;
	padding-top: 15px;
	padding-left: 2px;
	font-size: 15px;
	font-weight: bold;
	text-transform: capitalize;
	color:#666;
}


.transclusionList .items>div .dvalue
{
	font-size:14px;
	color:#999;
	padding-left:5px;
	padding-bottom: 10px;
}
.transclusionList .items>div .documentation
{
	font-size:14px;
	color:#666;
	padding-left: 15px;
}
.transclusionList .items>div .name:hover
{
	background: #eee;
	color:#666;
}
.transclusionList .items>div .dvalue:hover
{
	background: #eee;
	color:#666;
}
.transclusionList .items>div .documentation:hover
{
	background: #eee;
	color:#666;
}

[data-property=documentation].editable.reference .transclusion {
	border-bottom: 1px solid blue;
	/*background: lightgrey;*/
}

[data-property=documentation].editable.reference .transclusion:hover {
	background: lightgrey;	
}


[data-property=name].editable.reference .transclusion {
	border-bottom: 1px solid blue;
	/*background: lightgrey;*/
}

[data-property=name].editable.reference .transclusion:hover {
	background: lightgrey;	
}

[data-property=value].editable.reference .transclusion {
	border-bottom: 1px solid blue;
	/*background: lightgrey;*/
}

[data-property=value].editable.reference .transclusion:hover {
	background: lightgrey;	
}

#saveAll {
	display: none;
	float: right;
}

.inspectors {
	left: 0px;
	z-index: 100;
} 

.print-only {
	display: none;
}

.missing-trans-ref {
	background-color: #E14A4A;
}


media="screen"
.table-striped>tbody>tr:nth-child(even)>td, .table-striped>tbody>tr:nth-child(even)>th {
background-color: #ffffff;
}


.dropdown-submenu{position:relative;}
.dropdown-submenu>.dropdown-menu{top:0;left:100%;margin-top:-6px;margin-left:-1px;-webkit-border-radius:0 6px 6px 6px;-moz-border-radius:0 6px 6px 6px;border-radius:0 6px 6px 6px;}
.dropdown-submenu:hover>.dropdown-menu{display:block;}
.dropdown-submenu>a:after{display:block;content:" ";float:right;width:0;height:0;border-color:transparent;border-style:solid;border-width:5px 0 5px 5px;border-left-color:#cccccc;margin-top:5px;margin-right:-10px;}
//.dropdown-submenu:hover>a:after{border-left-color:#ffffff;}
.dropdown-submenu.pull-left{float:none;}.dropdown-submenu.pull-left>.dropdown-menu{left:-100%;margin-left:10px;-webkit-border-radius:6px 0 6px 6px;-moz-border-radius:6px 0 6px 6px;border-radius:6px 0 6px 6px;}
/*
 * .transclusion .items>div .edit
 * {
 * 	margin-top:1px;
 * 		width:100%;
 *
 * 			text-align: right;
 * 				color:#999;
 * 					padding-top:1px;
 * 						padding-bottom:4px;
 * 						}
 * 						*/

